# fastapi-crud-builder

./: README.md  pyproject.toml  ruff.toml
app/: config.py  main.py
app/adapter/incoming/web/: base.py  post.py
app/adapter/incoming/web/schema/request/: post.py
app/adapter/outbound/: crud.py
app/dependency/: crud.py  db.py
app/domain/entity/: __init__.py  base.py  post.py  user.py
app/domain/schema/: base.py  post.py  user.py
app/domain/service/: crud.py
app/port/outbound/repository/: base.py
tests/: conftest.py
tests/adapter/incoming/web/: test_post.py
