[tool.poetry]
name = "fastapi-crud-builder"
version = "0.1.0"
description = "FastAPI & SQLAlchemy CRUD Builder Example"
authors = ["Elliot Yim <yimsb04@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
ruff = "^0.4.5"
ruff-lsp = "^0.0.53"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests"
]